fixed word wrap, and amenities retrieval

--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -18,7 +18,7 @@ header .logo {
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    margin-top: 17.5px;
+    margin-top: 15px;
     margin-right: 30px;
 }
 .available {
